doing the basics

--- a/ByteMe/appsettings.json
+++ b/ByteMe/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=bytemedb;User Id=root;Password=benchpr;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
