--- a/ByteMe/ByteMe.API.csproj
+++ b/ByteMe/ByteMe.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -21,6 +21,10 @@
     <Folder Include="Handlers\" />
     <Folder Include="Middleware\" />
     <Folder Include="Validators\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ByteMe.Shared\ByteMe.Shared.csproj" />
   </ItemGroup>
 
 </Project>
